CRNCC-2048 Resolved: - Search button requires a label (currently 'blank') - Tabbing through the page, the search button (magnifying glass) doesn't receive visible focus

--- a/BPOR/BPOR.Rms/wwwroot/css/nihr-ui.css
+++ b/BPOR/BPOR.Rms/wwwroot/css/nihr-ui.css
@@ -370,3 +370,8 @@ button.govuk-back-link {
     border: none;
     background: none;
 }
+
+
+.govuk-button.govuk-input__suffix {
+    border-radius: 0px 4.2px 4.2px 0px !important;
+}
